fix: fixed spacing in WebKit

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,6 +72,7 @@ header div a, footer div a {
 
 .name-bar h1 {
   margin-bottom: 1rem;
+  text-align: center;
 }
 
 .contacts {
@@ -80,7 +81,7 @@ header div a, footer div a {
   justify-content: center;
   text-align: center;
   width: 80%;
-  margin-bottom: 1rem;
+  margin: 0 auto 1rem auto;
 }
 
 .contact {
